cmake_minimum_required (VERSION 2.8)

project (bbase NONE)
set (CMAKE_INSTALL_MESSAGE LAZY)

install (DIRECTORY src/bin DESTINATION "${CMAKE_INSTALL_PREFIX}"
  USE_SOURCE_PERMISSIONS
  PATTERN "*.pyc" EXCLUDE
  PATTERN "__pycache__" EXCLUDE
)

# posix executables
file(COPY src/env DESTINATION ${CMAKE_INSTALL_PREFIX}
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

file(COPY src/init DESTINATION ${CMAKE_INSTALL_PREFIX}
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

install(FILES info.json DESTINATION "${CMAKE_INSTALL_PREFIX}")
